cluster/apps/joomla/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: joomla
  labels:
    goldilocks.fairwinds.com/enabled: "true"
    kustomize.toolkit.fluxcd.io/prune: disabled
