cluster/apps/joomla/policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: joomla
spec:
  podSelector: {}
  policyTypes:
    - Egress
  egress:
    - ports:
        - port: 53
          protocol: UDP
        - port: 53
          protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-local-access
  namespace: joomla
spec:
  podSelector: {}
  egress:
    - to:
        # Only allow egress to internet
        - ipBlock:
            cidr: 0.0.0.0/0
            except:
              - ${SECRET_HOMELAN_IPV4}
              - ${NETWORK_K8S_POD_CIDR}
              - ${NETWORK_K8S_SERVICE_CIDR}
              - 192.168.0.0/16
        - ipBlock:
            cidr: ::/0
            except:
              - ${SECRET_HOMELAN_IPV6}
              - ${NETWORK_K8S_POD_CIDR_V6}
              - ${NETWORK_K8S_SERVICE_CIDR_V6}
              - fdd5:aa8:9535::/48
  policyTypes:
    - Egress
